devops-sample/devops-sample/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-sample-deployment
  labels:
    app: devops-sample
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-sample
  template:
    metadata:
      labels:
        app: devops-sample
    spec:
      containers:
      - name: devops-sample
        image: shamchaudhari/devops-sample:1.0
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
