devops-sample/devops-sample/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-sample-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: devops-sample.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-sample-service
                port:
                  number: 80
